--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
 	},
 	"main":			"index.coffee",
 	"dependencies": {
-		"coffee-script":	"^1.10.0"
+		"coffee-script":			"^1.10.0",
+		"config":					"^1.16.0",
+		"node-telegram-bot-api":	"^0.15.0"
 	},
 	"scripts": {
+		"bot":		"coffee index.coffee",
 		"test":		"echo \"Error: no test specified\" && exit 1"
 	}
 }
