--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
 		"type": "git",
 		"url": "https://github.com/derhuerst/lagesonum-telegram.git"
 	},
-	"main":			"index.coffee",
+	"main":			"index.js",
 	"dependencies": {
 		"coffee-script":			"^1.10.0",
 		"config":					"^1.16.0",
-		"redis":					"^2.2.5",
 		"node-telegram-bot-api":	"^0.15.0"
 	},
 	"scripts": {
-		"start-redis":	"coffee ./scripts/start-redis.coffee",
-		"stop-redis":	"coffee ./scripts/stop-redis.coffee",
-		"bot":			"coffee index.coffee",
+		"start-redis":	"node ./scripts/start-redis.js",
+		"stop-redis":	"node ./scripts/stop-redis.js",
+		"bot":			"node index.js",
 		"test":			"echo \"Error: no test specified\" && exit 1"
 	}
 }
